--- a/HNS.csproj
+++ b/HNS.csproj
@@ -41,19 +41,21 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Camera.cs" />
-    <Compile Include="Drawer.cs" />
-    <Compile Include="G.cs" />
-    <Compile Include="Game1.cs" />
-    <Compile Include="Hider.cs" />
+    <Compile Include="Map\Camera.cs" />
+    <Compile Include="layer\Drawer.cs" />
+    <Compile Include="NeuralNetwork\Neuron.cs" />
+    <Compile Include="NeuralNetwork\SeekerNeuroNetwork.cs" />
+    <Compile Include="StaticClass.cs" />
+    <Compile Include="MainGame.cs" />
+    <Compile Include="layer\Hider.cs" />
     <Compile Include="Input.cs" />
-    <Compile Include="Map.cs" />
-    <Compile Include="MapHider.cs" />
-    <Compile Include="MovingObj.cs" />
-    <Compile Include="OneLine.cs" />
+    <Compile Include="Map\Map.cs" />
+    <Compile Include="Map\MapHider.cs" />
+    <Compile Include="layer\Characters.cs" />
+    <Compile Include="ExternalSaves.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Seeker.cs" />
+    <Compile Include="layer\Seeker.cs" />
     <Compile Include="View.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -70,6 +72,7 @@
     <MonoGameContentReference Include="Content\Content.mgcb" />
     <None Include="app.manifest" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
